--- a/biblioteca_digital/libros/templates/libros/mapas.html
+++ b/biblioteca_digital/libros/templates/libros/mapas.html
@@ -275,9 +275,9 @@ header {
     </header>
     <main>
         <h2>Lista de Mapas</h2>
-
+        {% if user.es_bibliotecaria %}
         <a href="{% url 'alta_mapa' %}" class="btn-carga-manual">Carga Manual</a>
-        
+        {% endif %}
         <!-- Barra de búsqueda -->
         <div id="search-form">
             <input type="text" id="search-input" placeholder="Buscar por tipo o descripción...">
