--- a/biblioteca_digital/libros/templates/libros/multimedia.html
+++ b/biblioteca_digital/libros/templates/libros/multimedia.html
@@ -272,8 +272,9 @@ header {
     </header>
     <main>
         <h2>Lista de Multimedia</h2>
+        {% if user.es_bibliotecaria %}
         <a href="{% url 'alta_multimedia' %}" class="btn-carga-manual">Carga Manual</a>
-        
+        {% endif %}
         <!-- Barra de búsqueda -->
         <div id="search-form">
             <input type="text" id="search-input" placeholder="Buscar por materia o contenido...">
