--- a/biblioteca_digital/libros/templates/libros/proyector.html
+++ b/biblioteca_digital/libros/templates/libros/proyector.html
@@ -268,9 +268,9 @@ header {
     </header>
     <main>
         <h2>Lista de Proyectores</h2>
-
+        {% if user.es_bibliotecaria %}
         <a href="{% url 'alta_proyector' %}" class="btn-carga-manual">Carga Manual</a>
-
+        {% endif %}
         <!-- Barra de búsqueda -->
         <div id="search-form">
             <input type="text" id="search-input" placeholder="Buscar por marca...">
