--- a/biblioteca_digital/libros/templates/libros/notebook.html
+++ b/biblioteca_digital/libros/templates/libros/notebook.html
@@ -271,9 +271,9 @@ header {
     </header>
     <main>
         <h2>Lista de Notebooks</h2>
-
+        {% if user.es_bibliotecaria %}
         <a href="{% url 'alta_notebook' %}" class="btn-carga-manual">Carga Manual</a>
-
+        {% endif %}
         <!-- Barra de búsqueda -->
         <div id="search-form">
             <input type="text" id="search-input" placeholder="Buscar por marca o modelo...">
