--- a/biblioteca_digital/materiales/templates/materiales/formularios_altas/alta_libro.html
+++ b/biblioteca_digital/materiales/templates/materiales/formularios_altas/alta_libro.html
@@ -35,7 +35,7 @@
             <div class="col-4">
                 <label for="siglas_autor_titulo" class="text-input">Siglas Autor:</label>
                 <input type="text" class="form-control mb-3" id="siglas_autor_titulo" name="siglas_autor_titulo" placeholder="Escriba aquí...">
-                <label for="clasificacion_cdu" class="text-input"> Calsificación / CDU:</label>
+                <label for="clasificacion_cdu" class="text-input"> Clasificación / CDU:</label>
                 <input type="text" class="form-control" id="clasificacion_cdu" name="clasificacion_cdu" placeholder="Escriba aquí...">
             </div>
         </div>
