--- a/materiales/templates/modals/confirmacion_alta_material.html
+++ b/materiales/templates/modals/confirmacion_alta_material.html
@@ -1,6 +1,6 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/modals/modal_confirmacion_material.css' %}">
-
+<link rel="stylesheet" href="{% static 'css/modal_confirmacion_material.css' %}">
 <!-- Modal de Confirmación de Alta de Material -->
 <div class="modal fade" id="modalConfirmacionAltaMaterial" tabindex="-1" aria-labelledby="modalConfirmacionLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-lg">
