--- a/materiales/templates/materiales/formularios_altas/alta_materiales.html
+++ b/materiales/templates/materiales/formularios_altas/alta_materiales.html
@@ -68,8 +68,7 @@
         <!-- Botones -->
         <div id="buttons-container" class="row bg-white px-0 mx-0" style="border:none; box-shadow:none; display: none;">
             <div class="col-12 d-flex justify-content-end gap-5">
-                <button type="button" class="btn btn-outline-danger btn-sm boton-cancelar">Cancelar</button>
-                <button type="submit" class="btn btn-primary btn-sm boton-guardar">Guardar</button>
+              <!-- Estan repetidos los botones -->
             </div>
         </div>
     </form>
