--- a/materiales/templates/materiales/formularios_altas/formulario_libro.html
+++ b/materiales/templates/materiales/formularios_altas/formulario_libro.html
@@ -182,7 +182,7 @@ nav.navbar[style*="grid-area: navbar"] {
         <div class="alert alert-danger">{{ error }}</div>
     {% endif %}
 
-    <form id="form_alta_material" action="{% url 'confirmar_alta_libro' %}" method="POST" enctype="multipart/form-data">
+    <form id="form_alta_material" action="{% url 'alta_libro' %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
 
         <!-- Campos principales -->
